# mover-status

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  __main__.py  config.yaml  coverage.json  docker-compose.yml  main.py  moverStatus-combined.sh  moverStatus.sh  noxfile.py  pyproject.toml  requirements.txt
.claude/: python-313-pro.md
.cursor/rules/: python_rules.mdc
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  config.yml
.github/workflows/: ci.yml  docker-build.yml  e2e-mover-test.yml  release.yml
.kiro/specs/bash-to-python-conversion/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
.project_overview/: 00_project-overview.md  00_project_checklist.md  00_project_overview.md  01_implementation-checklist.md  pyright_analysis.txt  temp_progress.md  unit_test_plan_checklist.md
.taskmaster/: config.json  state.json
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
config/: constants.py  mover-status.yaml.template  settings.py
config/providers/: base.py  discord.yaml.template  telegram.yaml  telegram.yaml.template
config/providers/discord/: schemas.py  settings.py  types.py
config/providers/telegram/: schemas.py  settings.py  types.py
configs/examples/: config.yaml.example  config_complete.yaml.example  config_discord.yaml.example  config_telegram.yaml.example
configs/schemas/: main_config_schema.json  provider_config_schema.json
core/: calculator.py  monitor.py  process.py
docs/: CONFIG_SETUP.md  DOCKER_SETUP.md  PRD.txt  QUICK_START.md  UNRAID_NOTES.md  configuration_guide.md  development_plan.md  project_overview.md  refactoring_plan.md
examples/: config.yml
mover/: __init__.py  monitor.py  utils.py
mover_status/: README.md  __init__.py  __main__.py  application.py  cli.py
mover_status/config/: __init__.py  config_manager.py  default_config.py  loader.py  manager.py  manager_validation.py  models.py  registry.py  schema.py  types.py  validation_error.py  validator.py
mover_status/core/: __init__.py  dry_run.py  monitor.py  version.py
mover_status/core/calculation/: __init__.py  progress.py  size.py  time.py
mover_status/core/monitoring/: __init__.py  session.py  tracker.py
mover_status/core/simulation/: __init__.py  simulator.py
mover_status/notification/: __init__.py  base.py  formatter.py  manager.py  registry.py
mover_status/notification/providers/: __init__.py  api_provider.py  base_provider.py  webhook_provider.py
mover_status/utils/: __init__.py  data.py  logger.py  process.py
notifications/: base.py  factory.py
notifications/discord/: __init__.py  provider.py  templates.py  types.py
notifications/providers/discord/: __init__.py  config.py  provider.py  templates.py  types.py  validators.py
notifications/providers/telegram/: __init__.py  config.py  provider.py  templates.py  types.py  validators.py
notifications/telegram/: __init__.py  config.py  provider.py  templates.py  types.py
notifiers/: __init__.py  base.py  discord.py  telegram.py
scripts/: check_provider_isolation.py
shared/providers/discord/: __init__.py  types.py
shared/providers/telegram/: __init__.py  constants.py  errors.py  types.py  utils.py
shared/types/: discord.py  telegram.py
src/mover_status/: __init__.py  __main__.py  config.yaml
src/mover_status/app/: __init__.py  cli.py  runner.py
src/mover_status/config/: __init__.py  exceptions.py
src/mover_status/core/: __init__.py  calculation.py  config.py  disk_tracker.py  dispatcher.py  monitoring.py  orchestrator.py
src/mover_status/notifications/: __init__.py
src/mover_status/plugins/: __init__.py  discovery.py  loader.py  registry.py
src/mover_status/types/: __init__.py  aliases.py  models.py  protocols.py
src/mover_status/utils/: __init__.py  formatting.py  http_client.py  logging.py  sanitization.py  template.py
tests/: __init__.py  conftest.py  test_application.py  test_basic_functionality.py  test_cli.py  test_imports.py  test_init.py  test_main.py  test_mover.py  test_notifiers.py  test_setup.py  test_structure.py
tests/config/: test_settings.py
tests/config/providers/: test_provider_config.py
tests/core/: test_calculator.py  test_monitor.py  test_process.py
tests/e2e/: README.md  __init__.py  docker-compose.e2e.yml  mover_simulator.py  run_e2e_test.py
tests/e2e/config/: mover-status.yaml
tests/fixtures/: application_mocks.py  integration_fixtures.py  notification_mocks.py  progress_data_generators.py
tests/integration/: test_comprehensive_suite.py  test_notification_dispatcher.py  test_orchestrator.py  test_plugin_system.py  test_secret_sanitization.py
tests/integration/core/: __init__.py
tests/integration/e2e/: test_discord_notification_e2e.py  test_notification_delivery.py
tests/integration/plugins/: __init__.py
tests/integration/scenarios/: test_dry_run_validation.py  test_full_cycle.py  test_notification_flow.py  test_notification_performance.py  test_performance_stress.py  test_provider_failure_scenarios.py
tests/integration/utils/: __init__.py
tests/notifications/: test_base.py  test_notification_base.py  test_notification_factory.py
tests/property/: test_sanitization_invariants.py
tests/test_config/: test_config_manager.py  test_default_config.py  test_loader.py  test_registry.py  test_schema.py  test_validator.py
tests/test_core/: test_dry_run.py  test_monitor.py  test_version.py
tests/test_core/test_calculation/: test_progress.py  test_size.py  test_time.py
tests/test_notification/: test_base.py  test_formatter.py  test_manager.py  test_registry.py
tests/test_notification/providers/: test_api_provider.py  test_base_provider.py  test_discord.py  test_discord_config.py  test_init.py  test_structure.py  test_telegram.py  test_telegram_config.py  test_template.py  test_webhook_provider.py
tests/test_utils/: mock_types.py  test_data.py  test_logger.py  test_process.py
tests/unit/app/: test_cli.py
tests/unit/config/: test_error_handling.py  (+3 more)
utils/: formatters.py  validators.py  version.py
(+196 files in other folders)
