[project]
name = "mover-status"
version = "0.1.0"
description = "Monitor Unraid Mover process and send real-time progress notifications to Discord and Telegram"
readme = "README.md"
authors = [
    { name = "engels74", email = "141435164+engels74@users.noreply.github.com" }
]
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.14"
keywords = ["unraid", "mover", "monitoring", "discord", "telegram", "notifications"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.10.0",
    "pyyaml>=6.0.0",
    "aiohttp>=3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "hypothesis>=6.100.0",
    "ruff>=0.9.0",
    "basedpyright>=1.24.0",
    "nox>=2024.10.0",
]

[project.scripts]
mover-status = "mover_status:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "C90"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "recommended"
failOnWarnings = true
pythonPlatform = "All"
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/node_modules",
    "**/.git",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=mover_status",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "property: Property-based tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload",
]
